Fix address bar text align on focus

--- a/userChrome-safaristyle.css
+++ b/userChrome-safaristyle.css
@@ -213,6 +213,12 @@ hbox.titlebar-placeholder {
 
 #urlbar * {
   font-size: 11px !important;
+  text-align: center !important;
+}
+
+.anonymous-div,
+.preview-div {
+  text-align: center !important;
 }
 
 .autocomplete-textbox,
